# kv

./: .gitignore  404.html  Justfile  README.md  dev.db  dev.ipynb  index.html  mkdocs.yml  requirements.txt  server.py
backends/blob/: index.html
backends/cosmos/: index.html
backends/filesystem/: index.html
backends/http/: index.html
backends/sql/: index.html
backends/sqlite/: index.html
blog/: index.html
docs/: getting-started.md  index.md  prefixing.md  supported-backends.md
docs/backends/: blob.md  cosmos.md  filesystem.md  http.md  sql.md  sqlite.md
getting-started/: index.html
kv/: Justfile  README.md  pyproject.toml
kv/src/kv/: __init__.py  __init__.pyi  _abc.py  _dict.py  cli.py  conn_strings.py  fs.py  prefix.py  serialization.py  sql.py  tests.py
kv/src/kv/azure/: __init__.pyi
kv/src/kv/azure/blob/: __init__.py  blob.py  container.py
kv/src/kv/azure/cosmos/: __init__.py  container.py  db.py  partition.py  util.py
kv/src/kv/http/: __init__.pyi  client.py  req.py  server.py
kv/src/kv/impl/: _dict.py  fs.py  redis.py  sql.py
kv/src/kv/impl/azure/: blob.py  container.py
kv/src/kv/impl/azure/blob/: blob.py  container.py
kv/src/kv/impl/azure/cosmos/: __init__.py  container.py  db.py  partition.py  util.py
kv/src/kv/impl/http/: __init__.pyi  client.py  server.py
kv/src/kv/impl/sqlite/: __init__.py  queries.py  sqlite.py
prefixing/: index.html
search/: search_index.json
supported-backends/: index.html
