[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kv"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Async, exception-free key-value store ABC. Implementations over SQLAlchemy, the filesystem, Azure Blob, and more."
dependencies = [
  "haskellian", "pydantic", "lazy-loader"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/marciclabas/kv.git"

[project.optional-dependencies]
fs = ["fs-tools"]
sql = ["sqlmodel"]
server = ["fastapi", "uvicorn"]
client = ["httpx"]

[project.scripts]
kv = "kv.cli:app"