[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-kv"
version = "0.3.9"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Async key-value store ABC. Implementations over SQLAlchemy, the filesystem, Redis, Azure Blob, and more."
dependencies = [
  "pydantic", "lazy-loader"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/marciclabas/kv.git"

[project.optional-dependencies]
sql = ["sqlmodel", "sqltypes"]
redis = ["redis"]
blob = ["azure-storage-blob", "aiohttp"]
cosmos = ["azure-cosmos", "aiohttp"]
server = ["fastapi", "uvicorn", "pyjwt"]
client = ["httpx", "pyjwt"]
cli = ["typer"]
all = ["fs-tools", "sqlmodel", "redis", "azure-storage-blob", "aiohttp", "fastapi", "uvicorn", "httpx", "typer"]

[project.scripts]
kv = "kv.cli:app"